--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
-
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
+        classpath 'happy.easter:transformer'
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
